fixes bug 70519 "Select All (+ Copy) does not clobber the X primary selection" patch=jwbaker@acm.org r=akkana sr=kin